fix hovering of visible ranking table
!important is evil. Probably best to get rid of it.

--- a/_sass/_competition.scss
+++ b/_sass/_competition.scss
@@ -68,7 +68,10 @@ table.competition{
 }
 
 table#ranking{
-	tbody{
+	td:first-child{
+		text-align: left;
+	}
+	&:not(.visible) tbody{
 		tr{
 			background-color: $hidden-color;
 			color: $hidden-color;
@@ -81,9 +84,6 @@ table#ranking{
 				transition: background-color 2s, color 2s;
 			}
 
-		}
-		td:first-child{
-			text-align: left;
 		}
 	}
 	&.visible tbody{
